<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/server_sets_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="top"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/date_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:id="@+id/textViewNormalizationMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/Title"
                android:padding="4dp"
                android:text="@string/normalization_method"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewSamplesPerAcquisition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewNormalizationMethod"
                android:padding="4dp"
                android:text="@string/samples_per_acquisition"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewAcquisitionInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewSamplesPerAcquisition"
                android:padding="4dp"
                android:text="@string/acquisition_interval"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewNumberOfAcquisitions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewAcquisitionInterval"
                android:padding="4dp"
                android:text="@string/total_aps"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
