<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/current_acquisition_set_settings"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normalizationMethodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="12dp"
        android:text="@string/normalization_method"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentNormalizationMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/normalizationMethodTitle" />

    <TextView
        android:id="@+id/titleScansPerAcquisition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentNormalizationMethod"
        android:layout_marginTop="8dp"
        android:text="@string/scans_per_acquisition"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentScansPerAcquisition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleScansPerAcquisition" />


    <TextView
        android:id="@+id/titleTimeInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentScansPerAcquisition"
        android:layout_marginTop="8dp"
        android:text="@string/interval_between_scans"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentTimeInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleTimeInterval" />

    <TextView
        android:id="@+id/titleNumberOfAcquisitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentTimeInterval"
        android:layout_marginTop="8dp"
        android:text="@string/current_number_of_acquisitions"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentNumberOfAcquisitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleNumberOfAcquisitions" />

</RelativeLayout>