<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="map.net.netmapscanner.activities.ZonesActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/imageButtonTest"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/acquire_current_zone"
            app:srcCompat="@drawable/ic_network_check_white_24dp" />

        <ImageButton
            android:id="@+id/imageButtonTrain"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/acquire_current_zone"
            app:srcCompat="@drawable/ic_fitness_center_white_24dp" />

        <ImageButton
            android:id="@+id/imageButtonReloadZones"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/acquire_current_zone"
            app:srcCompat="@drawable/ic_autorenew_white_24dp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/subtitleZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/facility_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subtitleZone"
        android:layout_alignLeft="@+id/subtitleZone"
        android:layout_alignStart="@+id/subtitleZone"
        android:text="@string/zones"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="24sp" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        tools:context="map.net.netmapscanner.activities.FacilitiesActivity">


        <ListView
            android:id="@+id/zonesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabNewZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:src="@drawable/ic_add_white_24dp"
            app:layout_anchorGravity="bottom|right|end" />
    </RelativeLayout>

</RelativeLayout>
